--- a/OznerSoftTest/OznerSoftTest/Base.lproj/Main.storyboard
+++ b/OznerSoftTest/OznerSoftTest/Base.lproj/Main.storyboard
@@ -40,6 +40,14 @@
                                     <action selector="beginSendPwd:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HXH-fL-AxR"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wbo-CR-ifj">
+                                <rect key="frame" x="164" y="514" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="sendSureAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="45M-WF-Gab"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
